<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabrielgatu.allaround.NewDiscussionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/default_primary"
        android:orientation="vertical"
        android:elevation="4dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_new_discussion"
            android:textSize="20dp"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:background="@color/default_primary">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:imeOptions="actionDone"
            android:hint="@string/discussion_new_title_tip"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/content"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:imeOptions="actionDone"
            android:hint="@string/discussion_new_text_tip"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/text"
        android:fontFamily="sans-serif-light"
        android:text="@string/discussion_new_tip"/>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save"
        fab:fab_colorNormal="@color/default_primary"
        fab:fab_colorPressed="@color/default_primary_dark"
        fab:fab_colorRipple="@color/default_primary" />

</RelativeLayout>
