<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gabrielgatu.allaround.drawer.ProfileEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@color/default_primary"
        android:gravity="center"
        android:elevation="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="Edit Profile"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_primary"
        android:orientation="horizontal"
        android:paddingBottom="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="48dp">

        <com.makeramen.RoundedImageView
            android:id="@+id/user_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/user_no_photo"
            app:border_color="@color/white"
            app:border_width="1dip"
            app:corner_radius="30dip"
            app:mutate_background="true"
            app:oval="true" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:hint="@string/hint_your_name"
            android:text="Matthew Boomer"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_primary"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:hint="@string/hint_your_email"
                android:text="email@domain.com"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/text"
            android:fontFamily="sans-serif-light"
            android:text="Change your profile name or your contact email. Also you can change your avatar by clicking on it. Please first of all ensure to have an internet connection."/>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_save"
            fab:fab_colorNormal="@color/default_primary"
            fab:fab_colorPressed="@color/default_primary_dark"
            fab:fab_colorRipple="@color/default_primary" />
    </RelativeLayout>

</LinearLayout>